# codebase-map

./: .coverage  .dockerignore  .gitignore  .importlinter  BRIEF.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE-PRO  README.md  SECURITY.md  codebase-map-self.yaml  codebase-map.example.yaml  pyproject.toml  setup.cfg
.claude/: settings.json
.claude/commands/: ci-watch.md  implement.md  review-gate.md  review.md  security-audit.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cbm-baseline.yml  cbm-post-merge.yml  cbm-pr-impact.yml  ci.yml  codebase-map-pr.yml  publish-pypi.yml
agents/: README.md
agents/business-analyst/: SKILL.md
agents/cto/: SKILL.md
agents/designer/: SKILL.md
agents/product-owner/: SKILL.md
agents/project-manager/: SKILL.md
agents/techlead/: SKILL.md
agents/tester/: SKILL.md
claude-plugins-repo/: CONTRIBUTING.md  LICENSE  PUBLISH_INSTRUCTIONS.md  README.md
claude-plugins-repo/.claude-plugin/: marketplace.json
codebase_map/: __init__.py  __main__.py  cli.py  config.py  hints.py  snapshot.py
codebase_map/exporters/: html_exporter.py  json_exporter.py
codebase_map/graph/: __init__.py  api_catalog.py  builder.py  cache.py  coverage.py  diff.py  diff_formatter.py  metrics.py  models.py  query.py  snapshot_diff.py
codebase_map/parsers/: base.py  python_parser.py  typescript_parser.py
design-preview/: codebase-map-CM-S1-design.html  codebase-map-CM-S2-design.html  codebase-map-CM-S3-design.html  codebase-map-v2-design.html  kmp-M0-design.html  kmp-M1-design.html  kmp-M2-design.html  kmp-M3-design.html  kmp-final-v1-design.html  kmp-v2-design.html
docs/: HC-DEPLOYMENT-GUIDE.md  ONBOARDING.md  README.md  vault-format-spec.md
docs/active/: ONBOARDING.md
docs/cbm-dual-snapshot/: CBM-Dual-Snapshot-Design.html  CBM-Implementation-Specs.md  CBM-PHASE1-TASK-BOARD.md  CBM-PHASE2-TASK-BOARD.md
docs/releases/: v2.0.1-hc-notification.md  v2.3.0.md  v2.4.0.md
docs/reviews/: CTO-Dogfood-M1-Report.md  CTO-Signoff-KMP-M0.md  FullTest_PreDelivery_2026-04-07.md  KMP-Phase2-Design-Review_2026-04-08.md  ReviewGate_Local_feat-cm-s3-day3-executive-detailpanel_2026-04-07.md  ReviewGate_Local_feat-cm-s3-day4-prdiff-businessflow_2026-04-07.md  ReviewGate_Local_feat-cm-s3-day5-responsive-polish_2026-04-07.md  ReviewGate_PR38_Round1_2026-04-08.md  ReviewGate_PR44_Round1_2026-04-08.md  ReviewGate_PR45_Round1_2026-04-08.md  ReviewGate_PR47_Round1_2026-04-09.md  ReviewGate_PR54_Round1_2026-04-10.md  ReviewGate_PR55_Round1_2026-04-11.md  ReviewGate_PR57_Round1_2026-04-11.md  ReviewGate_PR58_Round1_2026-04-14.md  ReviewGate_PR59_Round1_2026-04-16.md  ReviewGate_PR60_Round1_2026-04-17.md  ReviewGate_PR61_Round1_2026-04-18.md  ReviewGate_PR62_Round1_2026-04-21.md  ReviewGate_PR65_Round1_2026-04-23.md  ReviewGate_PR71_Round1_2026-04-12.md  (+11 more)
knowledge_memory/: __init__.py  __main__.py  cli.py  http_server.py  mcp_runner.py
mcp_server/: __init__.py  __main__.py  graph_cache.py  server.py
project/: CM-HOTFIX-V2.0.1-TASK-BOARD.md  CM-MEM-M0-TASK-BOARD.md  CM-MEM-M1-TASK-BOARD.md  CM-S1-TASK-BOARD.md  CM-S2-TASK-BOARD.md  CM-S3-TASK-BOARD.md  KMP-M0-DAY1-CHECKLIST.md  POST-CM-S3-HOTFIX-PLAN.md  board.html  hc-unknown-baseline.md  kmp-board.html
scripts/: refresh.py
specs/: spec.md
(+178 files in other folders)
