[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-map"
version = "1.0.0"
description = "Standalone function dependency graph generator for any codebase"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hyper Commerce", email = "hypercdp@gmail.com"},
]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "rank_bm25>=0.2.2",
]

[project.optional-dependencies]
http = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "import-linter>=2.0",
    "httpx>=0.27",
]

[project.scripts]
codebase-map = "codebase_map.cli:main"
codebase-memory = "knowledge_memory.cli:main"

[tool.setuptools.packages.find]
include = ["codebase_map*", "knowledge_memory*"]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
