[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-map"
version = "1.0.0"
description = "Standalone function dependency graph generator for any codebase"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hyper Commerce", email = "hypercdp@gmail.com"},
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "isort>=5.0",
    "flake8>=7.0",
]

[project.scripts]
codebase-map = "codebase_map.cli:main"

[tool.setuptools.packages.find]
include = ["codebase_map*"]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
